[gd_scene load_steps=4 format=2]

[ext_resource path="res://entities/triangle.png" type="Texture" id=1]
[ext_resource path="res://scripts/Player.gd" type="Script" id=2]
[ext_resource path="res://scripts/Angle.gd" type="Script" id=3]

[node name="Node2D" type="Node2D"]

[node name="triangle" type="Sprite" parent="."]
position = Vector2( 22.7485, 20.5 )
scale = Vector2( 0.354545, 0.354545 )
texture = ExtResource( 1 )
script = ExtResource( 2 )

[node name="angle1" type="Sprite" parent="triangle"]
position = Vector2( -0.23967, -41.1982 )
scale = Vector2( 0.209091, 0.209091 )
texture = ExtResource( 1 )

[node name="KinematicBody2D" type="KinematicBody2D" parent="triangle/angle1"]
input_pickable = true
script = ExtResource( 3 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="triangle/angle1/KinematicBody2D"]
position = Vector2( -30.0725, -40.4678 )
scale = Vector2( 6.7447, 6.9322 )
polygon = PoolVector2Array( 4.58946, -1.82055, 13.6591, 13.657, -4.84007, 13.5169 )

[node name="angle2" type="Sprite" parent="triangle"]
position = Vector2( 9.91716, 55 )
scale = Vector2( 0.209091, 0.209091 )
texture = ExtResource( 1 )
offset = Vector2( -280.348, -59.7826 )

[node name="KinematicBody2D2" type="KinematicBody2D" parent="triangle/angle2"]
position = Vector2( -48.5761, -460.078 )
input_pickable = true
script = ExtResource( 3 )
index = 1

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="triangle/angle2/KinematicBody2D2"]
position = Vector2( -263.138, 361.182 )
scale = Vector2( 6.7447, 6.9322 )
polygon = PoolVector2Array( 4.58946, -1.82055, 13.6591, 13.657, -4.84007, 13.5169 )

[node name="angle3" type="Sprite" parent="triangle"]
position = Vector2( 106.488, 54 )
scale = Vector2( 0.209091, 0.209091 )
texture = ExtResource( 1 )
offset = Vector2( -280.348, -59.7826 )

[node name="KinematicBody2D3" type="KinematicBody2D" parent="triangle/angle3"]
position = Vector2( -510.436, -455.296 )
input_pickable = true
script = ExtResource( 3 )
index = 2

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="triangle/angle3/KinematicBody2D3"]
position = Vector2( 199.108, 358.851 )
scale = Vector2( 6.7447, 6.9322 )
polygon = PoolVector2Array( 4.58946, -1.82055, 13.6591, 13.657, -4.84007, 13.5169 )
